# GPUCuda

./: ConvolveFFT.cu  README.md
Assignment/: Readme
Assignment/Day1/CUDA_kernel/: script.sh  squareArray.cu
Assignment/Day1/Convolution/: main.cu  script.sh
Assignment/Day1/Gamma/: main.cu  script.sh
Assignment/Day1/Linear/: main.cu  script.sh
Assignment/Day2/Convolution/: main.cu  script.sh
Assignment/Day2/Feature/: main.cu  script.sh
Assignment/Day2/Tensor/: main.cu  script.sh
Assignment/Day3/IsoTropic/: main.cu  script.sh
Assignment/Day4/Hist/: main.cu  script.sh
Assignment/Day4/ParRed/: script.sh
Day1/CUDA_kernel/: addArrays  addArrays.cu  squareArray
Day1/Convolution/: .main.cu.swo  main.cu
Day1/Convolution/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Day1/Gamma/: main.cu
Day1/Gamma/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Day1/Gamma/build_make/: CMakeCache.txt
Day1/Linear/: main.cu
Day1/Linear/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Day2/Convolution/: main.cu
Day2/Convolution/build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  main
Day2/Feature/: main.cu
Day2/Tensor/: main.cu
Day4/Hist/: main.cu
Day4/ParRed/: ParRed  main.cu
Project-DeConvolution/: CMakeLists.txt  GPUConvolve.cu  GetGradK.cu  KernelProjection.cu  L2GradGPU.cu  MaxFinder.cu  NonConvexOptimization.cu  README.md  SubtractAB.cu  blind.cu  buildPyramid.cu  coarseToFine.cu  conv.cu  dec.cu  gradTVcc.cu  gradTVccGPU.cu  library.h  main.cu  scalarMult.cu  script.sh
(+15 files in other folders)
